Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2328

Crash at startup with OpenSSL FIPS mode

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • 1.7.0
    • 1.7.0
    • util
    • None

    Description

      Commit d9e7037138646e3efb331af98c6982de13294c4b (part of KUDU-2291) introduced a crash at startup with OpenSSL configured in FIPS mode. It appears that in that mode, OpenSSL has a dynamic initializer function which calls dlopen(), and the wrapping in unwind_safeness.cc will attempt to call a null pointer as a function since its own initializer hasn't run yet.

      Attachments

        Activity

          People

            tlipcon Todd Lipcon
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: